--- a/estilos.css
+++ b/estilos.css
@@ -19,11 +19,11 @@ body {
 label i {
   width: 35px;
   height: 35px;
+  background-color: #000;
   text-align: center;
   font-size: 20px;
   line-height: 35;
   color: white;
-  background-color: #000;
   border-radius: 18%;
   display: none;
 }
@@ -71,7 +71,7 @@ label i {
   text-decoration: none;
 }
 
-.climaInicio {
+.clima {
   position: relative;
   line-height: 110px;
   margin-left: 5px;
@@ -237,12 +237,12 @@ footer iframe {
 .ini, .subir {
   width: 35px;
   height: 35px;
+  background-color: #000;
   position: fixed;
   right: 40px;
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #000;
   line-height: 35px;
   border-radius: 50%;
 }
