--- a/estilos.scss
+++ b/estilos.scss
@@ -8,6 +8,15 @@
 }
 //******VARIABLES******//
 $colorLetra: #282828;
+$paletas: (                //PALETA DE COLORES//
+    'cuerpo': #f9ffff,
+    'blanco': white,
+    'amazon': #ededed,
+    'bandRojo': rgb(245, 61, 44),
+    'bandAzul': rgb(52, 52, 235),
+    'instacolor': #f42e78,
+    'wpcolor': #25d366,
+);
 
 //******FIN de VARIABLES*****//
 html{
@@ -19,14 +28,17 @@ body{
     background-image: linear-gradient(white,#f9ffff,#ededed,rgb(234, 232, 232)
     ,rgb(212, 202, 202),rgba(78, 74, 74, 0.544));
 }
+@mixin tamanio ($wid, $hei, $Bcolor){
+    width: $wid;
+    height: $hei;
+    background-color: $Bcolor;
+}
 label i{
-    width: 35px;
-    height: 35px;
+    @include tamanio(35px, 35px,#000);
     text-align: center;
     font-size: 20px;
     line-height: 35;
-    color: white;
-    background-color: #000;
+    color: map-get($map: $paletas, $key: 'blanco');
     border-radius: 18%;
     display: none;
 }
@@ -54,22 +66,22 @@ label i{
 
     .espan1{
         color: $colorLetra;
-        background-color: rgb(245, 61, 44);
+        background-color: map-get($map: $paletas, $key: 'bandRojo');
     }
     .espan2{
         color: $colorLetra;
-        background-color: white;
+        background-color: map-get($map: $paletas, $key: 'blanco');
     }
     .espan3{
         color: $colorLetra;
-        background-color: rgb(52, 52, 235);
+        background-color: map-get($map: $paletas, $key: 'bandAzul');
     }
 }
 .logo:hover{
     border: 1px solid rgba(24, 21, 21, 0.4);
     text-decoration: none;
 }
-.climaInicio{
+.clima{
     position: relative;
     line-height: 110px;
     margin-left: 5px;
@@ -106,10 +118,10 @@ li{
         padding: 0 5px;
     }
     .fa-brands.fa-instagram:hover{
-        color: #f42e78;
+        color: map-get($map: $paletas, $key: 'instacolor');
     }
     .fa-brands.fa-whatsapp:hover{
-        color: #25d366;
+        color: map-get($map: $paletas, $key: 'wpcolor');
     }
 }
 .home{ //corresponde a Index
@@ -135,7 +147,7 @@ li{
     border-radius: 15px;
 }
 //*Fin de Index*/
-//* Servicios */
+//***** SERVICIOS *****/
 .section{
     background-color: rgb(223, 243, 249);
     border: 2px solid;   
@@ -232,14 +244,12 @@ footer{
 }
 //***BOTONES LATERALES DERECHO***/
 .ini{
-    width: 35px;
-    height: 35px;
+    @include tamanio(35px,35px ,#000);
     position: fixed;
     right: 40px;
     text-align: center;
     font-size: 20px;
-    color: white;
-    background-color: #000;
+    color: map-get($map: $paletas, $key: 'blanco' );
     line-height: 35px;
     border-radius: 50%;  
 }
