--- a/estilos.css
+++ b/estilos.css
@@ -39,10 +39,11 @@ body {
   font-size: 20px;
   margin: 0 10px;
   line-height: 110px;
-  border: 1px solid transparent;
+  border-bottom: 4px solid transparent;
+  transition: all 0.4s ease;
 }
 .menu .enlaces a:hover {
-  border: 1px solid rgba(24, 21, 21, 0.4);
+  border-bottom: 4px solid #c7c7c7;
   text-decoration: none;
 }
 .menu #btn-menu {
@@ -147,19 +148,47 @@ li {
   margin-left: auto;
   margin-right: auto;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 400px 350px 420px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 400px 350px 400px;
+  grid-template-areas: "a  a  b  c" "d  e  e  f" "g  h  i  i";
   grid-gap: 5px;
 }
-
-.img-foto:hover {
-  transform: scale(1.02);
-  transition: all 0.9s;
+.galeri .foto1 {
+  grid-area: a;
+}
+.galeri .foto2 {
+  grid-area: b;
+}
+.galeri .foto3 {
+  grid-area: c;
+}
+.galeri .foto4 {
+  grid-area: d;
+}
+.galeri .foto5 {
+  grid-area: e;
+}
+.galeri .foto6 {
+  grid-area: f;
+}
+.galeri .foto7 {
+  grid-area: g;
+}
+.galeri .foto8 {
+  grid-area: h;
+}
+.galeri .foto9 {
+  grid-area: i;
 }
 
 .img-foto {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
+}
+.img-foto:hover {
+  transform: scale(1.02);
+  transition: all 0.9s;
 }
 
 fieldset {
@@ -177,10 +206,15 @@ form {
   padding: 10px 20px;
 }
 
-input, textarea {
+button {
   width: 100%;
   margin-bottom: 20px;
+  border: none;
+}
+
+input, textarea {
   padding: 3px;
+  width: 100%;
   font-size: 15px;
   border-radius: 5px;
 }
@@ -204,7 +238,7 @@ footer iframe {
   margin-top: 0;
   border-radius: 10px;
   width: 100%;
-  height: 250px;
+  height: 234px;
 }
 
 .pie {
@@ -276,14 +310,30 @@ footer iframe {
   .menu {
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 130px 100px;
+    grid-template-areas: "a" "b";
+  }
+  .menu .zona-logo {
+    grid-area: a;
+    justify-self: center;
+  }
+  .menu .clima {
+    grid-area: b;
+    justify-self: center;
   }
   .menu .enlaces {
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .menu .enlaces a {
     width: 100px;
+    height: 55px;
     line-height: 60px;
+    transition: all 0.6s ease;
+  }
+  .menu .enlaces a:hover {
+    border-bottom: 4px solid #c7c7c7;
   }
 
   .fotoCarrusel img {
@@ -299,7 +349,7 @@ footer iframe {
   }
 
   .pie iframe {
-    width: 350px;
+    width: 530px;
     height: 250px;
     margin-left: 0px;
   }
