--- a/estilos.scss
+++ b/estilos.scss
@@ -57,10 +57,11 @@ body{
         font-size: 20px; //tamanio de letra
         margin: 0 10px ;
         line-height: 110px;
-        border: 1px solid transparent;
+        border-bottom: 4px solid transparent;
+        transition: all .4s ease;
     
         &:hover{
-            border: 1px solid rgba(24, 21, 21, 0.4);
+            border-bottom: 4px solid #c7c7c7;
             text-decoration: none;
         }
     }
@@ -163,17 +164,51 @@ li{
     margin-left: auto;
     margin-right: auto;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 400px 350px 420px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 400px 350px 400px;
+    grid-template-areas:    "a  a  b  c"
+                            "d  e  e  f"
+                            "g  h  i  i";
     grid-gap: 5px;
-}
-.img-foto:hover{
-    transform: scale(1.02);
-    transition: all 0.9s;
+    .foto1{
+        grid-area: a;
+    }
+    .foto2{
+        grid-area: b;
+    }
+    .foto3{
+        grid-area: c;
+    }
+    .foto4{
+        grid-area: d;
+    }
+    .foto5{
+        grid-area: e;
+    }
+    .foto6{
+        grid-area: f;
+    }
+    .foto7{
+        grid-area: g;
+    }
+    .foto8{
+        grid-area: h;
+    }
+    .foto9{
+        grid-area: i;
+    }
+
 }
 .img-foto{ //Que ocupe el 100% de las grillas del GRID
     width: 100%;
     height: 100%;
+    border-radius: 10px;
+
+    &:hover{
+        transform: scale(1.02);
+        transition: all 0.9s;
+    }
+
 }
 //* Fin de Galeria */
 
@@ -190,10 +225,14 @@ form{
     margin: auto; //*queda centrado todo el formulario*/
     padding: 10px 20px; //* relleno vertical y horizontal*/
 }
-input, textarea{
+button{
     width: 100%;
     margin-bottom: 20px; //*margen arriba*/
+    border: none;
+}
+input, textarea{
     padding: 3px;
+    width: 100%;
     font-size: 15px;
     border-radius: 5px;
 }
@@ -216,7 +255,7 @@ footer{
         margin-top: 0; //*elimino el margen superior del Iframe con respecto al Footer*/
         border-radius: 10px;
         width: 100%;
-        height: 250px;
+        height: 234px;
 
     }
 }
@@ -275,14 +314,33 @@ footer{
     .menu{
         display: grid;
         grid-template-columns: 1fr;
+        grid-template-rows: 130px 100px;
+        grid-template-areas: 
+        "a"
+        "b";
+        .zona-logo{
+            grid-area: a;
+            justify-self: center; 
+        }
+        .clima{
+            grid-area: b;
+            justify-self: center;
+        }
     
         .enlaces{
             display: flex;
             flex-direction: column;
+            align-items: center;
 
             a{
                 width: 100px;
+                height: 55px;
                 line-height: 60px;
+                transition: all .6s ease;
+
+                &:hover{
+                    border-bottom: 4px solid #c7c7c7;
+                }
             }
         }
     }
@@ -297,7 +355,7 @@ footer{
     }
     
     .pie iframe{ //Achico los iframe en este punto de Quiebre
-        width: 350px;
+        width: 530px;
         height: 250px;
         margin-left: 0px;
 
