--- a/estilos.css
+++ b/estilos.css
@@ -16,11 +16,6 @@ body {
   background-image: linear-gradient(white, #f9ffff, #ededed, rgb(234, 232, 232), rgb(212, 202, 202), rgba(78, 74, 74, 0.544));
 }
 
-.contenedor {
-  width: 66%;
-  margin: auto;
-}
-
 .menu {
   display: flex;
   justify-content: space-between;
@@ -41,6 +36,9 @@ body {
   line-height: 110px;
   border-bottom: 4px solid transparent;
   transition: all 0.4s ease;
+}
+.menu .enlaces a i {
+  padding-right: 5px;
 }
 .menu .enlaces a:hover {
   border-bottom: 4px solid #c7c7c7;
@@ -68,10 +66,10 @@ li {
 .social-media {
   width: 60px;
   height: auto;
-  font-size: 34px;
+  font-size: 35px;
   position: fixed;
   top: 35%;
-  right: 11px;
+  right: 3px;
   z-index: 999;
 }
 .social-media ul li a:hover {
@@ -106,6 +104,12 @@ li {
 
 .fotoCarrusel {
   border-radius: 15px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.fotoCarrusel img {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .section {
@@ -149,8 +153,8 @@ li {
   margin-right: auto;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 400px 350px 400px;
-  grid-template-areas: "a  a  b  c" "d  e  e  f" "g  h  i  i";
+  grid-template-rows: 400px 350px 390px 390px;
+  grid-template-areas: "a  a  b  c" "d  e  e  f" "g  h  i  i" "j  j  k  k";
   grid-gap: 5px;
 }
 .galeri .foto1 {
@@ -179,6 +183,12 @@ li {
 }
 .galeri .foto9 {
   grid-area: i;
+}
+.galeri .foto10 {
+  grid-area: j;
+}
+.galeri .foto11 {
+  grid-area: k;
 }
 
 .img-foto {
@@ -238,7 +248,7 @@ footer iframe {
   margin-top: 0;
   border-radius: 10px;
   width: 100%;
-  height: 234px;
+  height: 250px;
 }
 
 .pie {
@@ -255,7 +265,7 @@ footer iframe {
   height: 35px;
   background-color: #000;
   position: fixed;
-  right: 40px;
+  right: 30px;
   text-align: center;
   font-size: 20px;
   color: white;
@@ -344,8 +354,53 @@ footer iframe {
 
   .galeri {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(9, 2fr);
+    grid-template-columns: repeat(4, 1fr);
+    /*repetir 4 columnas, una fraccion c/u */
+    grid-template-rows: repeat(11, 350px);
+    grid-gap: 5px;
+  }
+  .galeri .foto1 {
+    grid-column: 1/5;
+  }
+  .galeri .foto2 {
+    grid-column: 1/5;
+    grid-row: 2/3;
+  }
+  .galeri .foto3 {
+    grid-column: 1/5;
+    grid-row: 3/4;
+  }
+  .galeri .foto4 {
+    grid-column: 1/5;
+    grid-row: 4/5;
+  }
+  .galeri .foto5 {
+    grid-column: 1/5;
+    grid-row: 5/6;
+  }
+  .galeri .foto6 {
+    grid-column: 1/5;
+    grid-row: 6/7;
+  }
+  .galeri .foto7 {
+    grid-column: 1/5;
+    grid-row: 7/8;
+  }
+  .galeri .foto8 {
+    grid-column: 1/5;
+    grid-row: 8/9;
+  }
+  .galeri .foto9 {
+    grid-column: 1/5;
+    grid-row: 9/10;
+  }
+  .galeri .foto10 {
+    grid-column: 1/5;
+    grid-row: 10/11;
+  }
+  .galeri .foto11 {
+    grid-column: 1/5;
+    grid-row: 11/12;
   }
 
   .pie iframe {
@@ -376,8 +431,52 @@ footer iframe {
 
   .galeri {
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(9, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    /*repetir 4 columnas, una fraccion c/u */
+    grid-template-rows: 350px 350px 350px 350px 350px 350px;
+    grid-gap: 5px;
+  }
+  .galeri .foto1 {
+    grid-column: a;
+  }
+  .galeri .foto2 {
+    grid-column: 3/5;
+  }
+  .galeri .foto3 {
+    grid-column: 1/3;
+    grid-row: 2/3;
+  }
+  .galeri .foto4 {
+    grid-column: 3/5;
+    grid-row: 2/3;
+  }
+  .galeri .foto5 {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+  .galeri .foto6 {
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+  .galeri .foto7 {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+  .galeri .foto8 {
+    grid-column: 3/5;
+    grid-row: 4/5;
+  }
+  .galeri .foto9 {
+    grid-column: 1/3;
+    grid-row: 5/6;
+  }
+  .galeri .foto10 {
+    grid-column: 3/5;
+    grid-row: 5/6;
+  }
+  .galeri .foto11 {
+    grid-column: 1/5;
+    grid-row: 6/7;
   }
 
   .menu {
@@ -414,13 +513,42 @@ footer iframe {
 
   .galeri {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /*repetir 2 columnas, una fraccion c/u */
-    grid-template-rows: 300px 300px 300px 300px 450px;
+    grid-template-columns: repeat(3, 1fr);
+    /*repetir 3 columnas, una fraccion c/u */
+    grid-gap: 5px;
   }
-
-  .foto9 {
+  .galeri .foto1 {
+    grid-column: a;
+  }
+  .galeri .foto2 {
+    grid-area: b;
+  }
+  .galeri .foto3 {
+    grid-area: c;
+  }
+  .galeri .foto4 {
+    grid-area: d;
+  }
+  .galeri .foto5 {
+    grid-area: e;
+  }
+  .galeri .foto6 {
+    grid-area: f;
+  }
+  .galeri .foto7 {
     grid-column: 1/3;
+  }
+  .galeri .foto8 {
+    grid-column: 3/4;
+  }
+  .galeri .foto9 {
+    grid-column: 4/5;
+  }
+  .galeri .foto10 {
+    grid-area: j;
+  }
+  .galeri .foto11 {
+    grid-area: k;
   }
 
   .menu {
