--- a/estilos.scss
+++ b/estilos.scss
@@ -34,10 +34,6 @@ body{
     background-color: $Bcolor;
 }
 
-.contenedor{
-    width: 66%;
-    margin: auto;
-}
 .menu{
     display: flex;
     justify-content: space-between; //separa los cajas/contenedores
@@ -59,7 +55,11 @@ body{
         line-height: 110px;
         border-bottom: 4px solid transparent;
         transition: all .4s ease;
-    
+        
+        i{
+            padding-right: 5px;
+        }
+
         &:hover{
             border-bottom: 4px solid #c7c7c7;
             text-decoration: none;
@@ -87,10 +87,10 @@ li{
 .social-media{ //BOTONES REDES SOCIALES//
     width: 60px;
     height: auto;
-    font-size: 34px;
+    font-size: 35px;
     position: fixed;
     top: 35%;
-    right: 11px;
+    right: 3px;
     z-index: 999;
 
     ul li a:hover{
@@ -122,6 +122,11 @@ li{
 }
 .fotoCarrusel{
     border-radius: 15px;
+
+    img{
+        object-fit: cover;
+    }
+    object-fit: contain;
 }
 //*Fin de Index*/
 //***** SERVICIOS *****/
@@ -165,10 +170,11 @@ li{
     margin-right: auto;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 400px 350px 400px;
+    grid-template-rows: 400px 350px 390px 390px; 
     grid-template-areas:    "a  a  b  c"
                             "d  e  e  f"
-                            "g  h  i  i";
+                            "g  h  i  i"
+                            "j  j  k  k";
     grid-gap: 5px;
     .foto1{
         grid-area: a;
@@ -196,6 +202,12 @@ li{
     }
     .foto9{
         grid-area: i;
+    }
+    .foto10{
+        grid-area: j;
+    }
+    .foto11{
+        grid-area: k;
     }
 
 }
@@ -255,7 +267,7 @@ footer{
         margin-top: 0; //*elimino el margen superior del Iframe con respecto al Footer*/
         border-radius: 10px;
         width: 100%;
-        height: 234px;
+        height: 250px;
 
     }
 }
@@ -271,7 +283,7 @@ footer{
 .ini{
     @include tamanio(35px,35px ,#000);
     position: fixed;
-    right: 40px;
+    right: 30px;
     text-align: center;
     font-size: 20px;
     color: map-get($map: $paletas, $key: 'blanco' );
@@ -350,8 +362,53 @@ footer{
     }
     .galeri{
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(9, 2fr);
+        grid-template-columns: (repeat(4, 1fr)); /*repetir 4 columnas, una fraccion c/u */
+        grid-template-rows: repeat(11, 350px);
+        grid-gap: 5px;
+        .foto1{
+            grid-column: 1/5;
+        }
+        .foto2{
+            grid-column: 1/5;
+            grid-row: 2/3;
+        }
+        .foto3{
+            grid-column: 1/5;
+            grid-row: 3/4;
+        }
+        .foto4{
+            grid-column: 1/5;
+            grid-row: 4/5;
+        }
+        .foto5{
+            grid-column: 1/5;
+            grid-row: 5/6;
+        }
+        .foto6{
+            grid-column: 1/5;
+            grid-row: 6/7;
+        } 
+        .foto7{
+            grid-column: 1/5;
+            grid-row: 7/8;
+        }
+        .foto8{
+            grid-column: 1/5;
+            grid-row: 8/9;
+        }
+        .foto9{
+            grid-column: 1/5;
+            grid-row: 9/10;
+        }
+        .foto10{
+            grid-column: 1/5;
+            grid-row: 10/11;
+        }
+        .foto11{
+            grid-column: 1/5;
+            grid-row: 11/12;
+        }
+        
     }
     
     .pie iframe{ //Achico los iframe en este punto de Quiebre
@@ -380,8 +437,51 @@ footer{
     }
     .galeri{
         display: grid;
-        grid-template-columns:  1fr;
-        grid-template-rows: repeat(9, 1fr)
+        grid-template-columns: (repeat(4, 1fr)); /*repetir 4 columnas, una fraccion c/u */
+        grid-template-rows: 350px 350px 350px 350px 350px 350px;
+        grid-gap: 5px;
+        .foto1{
+            grid-column: a;
+        }
+        .foto2{
+            grid-column: 3/5;
+        }
+        .foto3{
+            grid-column: 1/3;
+            grid-row: 2/3;
+        }
+        .foto4{
+            grid-column: 3/5;
+            grid-row: 2/3;
+        }
+        .foto5{
+            grid-column: 1/3;
+            grid-row: 3/4;
+        }
+        .foto6{
+            grid-column: 3/5;
+            grid-row: 3/4;
+        } 
+        .foto7{
+            grid-column: 1/3;
+            grid-row: 4/5;
+        }
+        .foto8{
+            grid-column: 3/5;
+            grid-row: 4/5;
+        }
+        .foto9{
+            grid-column: 1/3;
+            grid-row: 5/6;
+        }
+        .foto10{
+            grid-column: 3/5;
+            grid-row: 5/6;
+        }
+        .foto11{
+            grid-column: 1/5;
+            grid-row: 6/7;
+        }
     }
     .menu{
         display: grid;
@@ -414,11 +514,41 @@ footer{
     }
     .galeri{
         display: grid;
-        grid-template-columns: (repeat(2, 1fr)); /*repetir 2 columnas, una fraccion c/u */
-        grid-template-rows: 300px 300px 300px 300px 450px;
-    }
-    .foto9{
-        grid-column: 1/3;
+        grid-template-columns: (repeat(3, 1fr)); /*repetir 3 columnas, una fraccion c/u */
+        grid-gap: 5px;
+        .foto1{
+            grid-column: a;
+        }
+        .foto2{
+            grid-area: b;
+        }
+        .foto3{
+            grid-area: c;
+        }
+        .foto4{
+            grid-area: d;
+        }
+        .foto5{
+            grid-area: e;
+        }
+        .foto6{
+            grid-area: f;
+        }
+        .foto7{
+            grid-column: 1/3;
+        }
+        .foto8{
+            grid-column: 3/4;
+        }
+        .foto9{
+            grid-column: 4/5;
+        }
+        .foto10{
+            grid-area: j;
+        }
+        .foto11{
+            grid-area: k;
+        }
     }
     .menu{
         display: grid;
