--- a/estilos.css
+++ b/estilos.css
@@ -112,6 +112,14 @@ li {
      object-fit: cover;
 }
 
+.btn-previo {
+  background-image: linear-gradient(to left, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.5) 100%);
+}
+
+.btn-siguiente {
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.5) 100%);
+}
+
 .nosotros {
   margin-top: 30px;
   height: 500px;
